--- a/test_page.html
+++ b/test_page.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-<title id="page_title">Letters reader </title>
+<title id="page_title">Quiz test </title>
 <link rel="stylesheet" type="text/css" href="quiz.css">
 
 </head>
@@ -19,69 +19,69 @@
   <center><big>Quiz admin page</big></center>
   <br><br>
 
-  <div class="response" id="round_list"></div>
   <button onclick="show_rounds()">Показать раунды</button>
+  <div class="response" id="round_list"></div>
 
-  <br><br><br>
+  <br><hr><br>
 
   Введи id раунда<br>
-  <input type="text" id="round_id"><br>
+  <input type="text" id="round_id_1"><br>
+  <button onclick="show_questions()">Показать вопросы раунда</button>
   <div class="response" id="question_list"></div>
-  <button>Показать вопросы раунда</button>
 
-  <br><br><br>
+  <br><hr><br>
 
   Пример:
   <div style="white-space: pre-wrap; font-size: 0.6em;">
 {
-  round_nm: "Название раунда",
-  theme_nm: "Тема",
-  questions: [
+  "round_nm": "Название раунда",
+  "theme_nm": "Тема",
+  "questions": [
     {
-      question_text: "Угадай, какой ответ правильный?",
-      answer_cnt: 4,
-      correct_num: 1,
-      time_limit: 10,
-      img_path: "path/to/img.jpg"
+      "question_text": "Угадай, какой ответ правильный?",
+      "answer_cnt": 4,
+      "correct_num": 1,
+      "time_limit": 10,
+      "img_path": "path/to/img.jpg"
     },
 
     {
-      question_text: "Угадай ещё раз, какой ответ правильный?",
-      answer_cnt: 4,
-      correct_num: 3,
-      time_limit: 15,
-      img_path: ""
+      "question_text": "Угадай ещё раз, какой ответ правильный?",
+      "answer_cnt": 4,
+      "correct_num": 3,
+      "time_limit": 15,
+      "img_path": ""
     },
 
     {
-      question_text: "Угадай ещё раз, какой ответ правильный?",
-      answer_cnt: 4,
-      correct_num: 3,
-      time_limit: 15,
-      img_path: ""
+      "question_text": "Угадай ещё раз, какой ответ правильный?",
+      "answer_cnt": 4,
+      "correct_num": 3,
+      "time_limit": 15,
+      "img_path": ""
     }
   ]
 }
   </div>
 
   Введи информацию о раунде как в примере:<br>
-  <textarea class="big_input" id="story_description" cols="40"></textarea>
-  <div class="response" id=""></div>
-  <button>Загрузить раунд на сервер</button>
+  <textarea class="big_input" id="round_info" cols="40"></textarea>
+  <button onclick="add_round()">Загрузить раунд на сервер</button>
+  <div class="response" id="add_round_res"></div>
 
-  <br><br><br>
+  <br><hr><br>
 
   Введи id раунда<br>
   <input type="text" id="del_round_id"><br>
-  <div class="response" id="question_list"></div>
-  <button>Удалить раунд</button>
+  <button onclick="del_round()">Удалить раунд</button>
+  <div class="response" id="del_round_res"></div>
 
-  <br><br><br>
+  <br><hr><br>
 
-  <div class="response" id="rating"></div>
   <button>Показать таблицу рейтинга</button>
+  <div class="response" id="rating"></div>
 
-  <br><br><br>
+  <br><hr><br>
 
   <br><br><br>
 </div>
