--- a/test_page.html
+++ b/test_page.html
@@ -78,7 +78,9 @@
 
   <br><hr><br>
 
-  // Можно юзать, чтобы смотреть всех пользователей<br>
+  // Можно юзать, чтобы смотреть всех пользователей
+  <br>
+  // Показывает только с ненулевым рейтингом
   <button onclick="get_ratings()">Показать таблицу рейтинга</button>
   <div class="response" id="rating_res"></div>
 
