--- a/test_page.html
+++ b/test_page.html
@@ -19,6 +19,14 @@
   <center><big>Quiz admin page</big></center>
   <br><br>
 
+  Тестовая картинка<br>
+  Хранится на сервере<br>
+  Получаем GET запросом<br>
+  "letters-reader2.tk/quiz/img/test.jpg"<br>
+
+  <img src="https://letters-reader2.tk/quiz/img/test.jpg" alt="test img" width="200">
+  <br><hr><br>
+
   <button onclick="show_rounds()">Показать раунды</button>
   <div class="response" id="round_list"></div>
 
@@ -145,6 +153,9 @@
   <input type="password" id="user_passwd4">
   <button onclick="set_score()">Загрузить баллы на сервер</button>
   <div class="response" id="set_score_res"></div>
+
+  <br><hr><br>
+
 
 </div>
 <br><br>
